--- a/Cardapio Back/src/main/resources/application.properties
+++ b/Cardapio Back/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/food
+spring.datasource.url=jdbc:postgresql://localhost:5432/padaria
 spring.datasource.username=liukenmonteiro
 spring.datasource.password=password
